--- a/index01.html
+++ b/index01.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../estilos/style.css"/>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="estilos/style.css"/>
     <title>Mascote Android</title>
 </head>
 <body>
@@ -37,8 +37,8 @@
             mascote.</p>
             <!--IMAGENS DO MASCOTE-->
             <picture id="picture01">
-                <source media="(max-width: 598px)" srcset="../imagens/dan-droids-pq.png" type="image/png"/>
-                <img src="../imagens/dan-droids.png" alt="img-mascote.png">
+                <source media="(max-width: 598px)" srcset="imagens/dan-droids-pq.png" type="image/png"/>
+                <img src="imagens/dan-droids.png" alt="img-mascote.png">
             </picture>
             <p class="paragrafos">Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <span style="font-weight: bold;color: #222E5C;">Dandroids</span>.</p>
             <h2 class="titulos2">Surge um novo mascote</h2>
@@ -47,14 +47,14 @@
             agradável.</p>
             <!--IMAGENS DA DONA-->
             <picture id="picture02">
-                <source media="(max-width: 598px)" srcset="../imagens/irina-blok-pq.jpg" type="image/jpeg"/>
-                <img src="../imagens/irina-blok.jpg" alt="img-irana.jpeg"/>
+                <source media="(max-width: 598px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpeg"/>
+                <img src="imagens/irina-blok.jpg" alt="img-irana.jpeg"/>
             </picture>
             <p class="paragrafos">A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também
             deveria gerar identificação rápida com quem o olha. Surgiu então o <span style="font-weight: bold;color: #222E5C;">Bugdroid</span>, o novo mascote do Android.</p>
             <!--IMAGENS DO ANDROIS NOVO-->
             <picture id="picture03">
-                <img src="../imagens/bugdroid.png" alt="img-androis.png"/>
+                <img src="imagens/bugdroid.png" alt="img-androis.png"/>
             </picture>
             <p class="paragrafos">A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para
             indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou
